--- a/src/style/StarBackground.scss
+++ b/src/style/StarBackground.scss
@@ -5,10 +5,10 @@
   width: 100vw;
   height: 100vh;
   background-color: #383347;
-  background-image: url('../assets/star.svg'), url('../assets/star.svg');
-  background-size: 15vw 15vw;
-  background-repeat: repeat;
-  background-position: 0 0, 7.5vw 7.5vw;
+  //background-image: url('../assets/star.svg'), url('../assets/star.svg');
+  //background-size: 15vw 15vw;
+  //background-repeat: repeat;
+  //background-position: 0 0, 7.5vw 7.5vw;
   z-index: -1;
 }
 
