--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,43 @@
-.body{
-    overflow: hidden;
+.body {
     height: 100vh;
     width: 100vw;
     margin: 0;
     padding: 0;
+}
+
+.page-main-container {
+    display: flex;
+    flex-direction: column;
+    height: 100vh;
+    width: 100vw;
+    overflow-x: hidden;
+    overflow-y: hidden;
+    position: relative;
+}
+
+.titel-page-main-container {
+    display: flex;
+    flex-direction: column;
+    margin-top: 15%;
+}
+
+.titel-page-main {
+    z-index: 10;
+}
+
+.gif {
+    width: 65vw;
+    height: 65vh;
+    margin-left: 57vw;
+    margin-top: 5vh;
+    object-fit: cover;
+    position: absolute;
+    z-index: 5;
+}
+
+.text-container {
+    position: absolute;
+    top: 21%;
+    left: 74.25%;
+    z-index: 15;
 }
