--- a/src/_theme.scss
+++ b/src/_theme.scss
@@ -4,12 +4,14 @@
 @import url('https://fonts.googleapis.com/css2?family=Luckiest+Guy&family=Oswald:wght@200..700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Roboto+Condensed:wght@400;700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Fjalla+One&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Luckiest+Guy&family=Oswald:wght@200..700&family=Pixelify+Sans:wght@400..700&display=swap');
 
 // Define font variables
 $title-font: 'Jacquard 24', system-ui;
 $compact-font-1: 'Oswald', sans-serif;
 $compact-font-2: 'Roboto Condensed', sans-serif;
 $compact-font-3: 'Fjalla One', sans-serif;
+$pixel-font-1: 'Pixelify Sans', sans-serif;
 
 // Define color variables
 $pink: #ff69b4;
