--- a/src/_theme.scss
+++ b/src/_theme.scss
@@ -5,6 +5,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto+Condensed:wght@400;700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Fjalla+One&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Luckiest+Guy&family=Oswald:wght@200..700&family=Pixelify+Sans:wght@400..700&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Press+Start+2P');
 
 // Define font variables
 $title-font: 'Jacquard 24', system-ui;
@@ -12,6 +13,8 @@ $compact-font-1: 'Oswald', sans-serif;
 $compact-font-2: 'Roboto Condensed', sans-serif;
 $compact-font-3: 'Fjalla One', sans-serif;
 $pixel-font-1: 'Pixelify Sans', sans-serif;
+$pixel-font-2: 'Press Start 2P', cursive;
+
 
 // Define color variables
 $pink: #ff69b4;
