--- a/src/App.css
+++ b/src/App.css
@@ -112,3 +112,20 @@
     left: 35%;
     z-index: 15;
 }
+
+.button-arrow {
+    position: absolute;
+    top: 85%;
+    left: 75%;
+    z-index: 15;
+}
+
+.temp-box {
+    position: absolute;
+    top: 20%;
+    left: 70%;
+    width: 5vw;
+    height: 5vh;
+    z-index: 64;
+    background: #383347;
+}
