--- a/src/App.css
+++ b/src/App.css
@@ -49,16 +49,44 @@
     pointer-events: none;
 }
 
+@keyframes zoom {
+    0% {
+        transform: scale(1);
+    }
+    100% {
+        transform: scale(1.6);
+    }
+}
+
+@keyframes shake {
+    0% { transform: translate(1px, 1px) rotate(0deg); }
+    10% { transform: translate(-1px, -2px) rotate(-1deg); }
+    20% { transform: translate(-3px, 0px) rotate(1deg); }
+    30% { transform: translate(3px, 2px) rotate(0deg); }
+    40% { transform: translate(1px, -1px) rotate(1deg); }
+    50% { transform: translate(-1px, 2px) rotate(-1deg); }
+    60% { transform: translate(-3px, 1px) rotate(0deg); }
+    70% { transform: translate(3px, 1px) rotate(-1deg); }
+    80% { transform: translate(-1px, -1px) rotate(1deg); }
+    90% { transform: translate(1px, 2px) rotate(0deg); }
+    100% { transform: translate(1px, -2px) rotate(-1deg); }
+}
+
 .raging-bunny {
     width: 120vw;
     height: 120vh;
-    margin-left: 13vw;
-    margin-top: -4vh;
+    margin-left: 5vw;
+    margin-top: -40vh;
     object-fit: cover;
     position: absolute;
-    z-index: 50;
-    transition: opacity 0.5s ease-in-out;
+    z-index: 1000;
     pointer-events: none;
+    animation:  shake 0.5s infinite;
+}
+
+.raging-bunny-zoom {
+    z-index: 1000;
+    animation: zoom 5s ease-in-out forwards
 }
 
 .sitting-bunny {
@@ -95,8 +123,8 @@
 .text-container-rage {
     position: absolute;
     top: 18%;
-    left: 45%;
-    z-index: 65;
+    left: 40%;
+    z-index: 1001;
 }
 
 .skip-button {
@@ -118,14 +146,4 @@
     top: 85%;
     left: 75%;
     z-index: 15;
-}
-
-.temp-box {
-    position: absolute;
-    top: 20%;
-    left: 70%;
-    width: 5vw;
-    height: 5vh;
-    z-index: 64;
-    background: #383347;
 }
