--- a/src/style/Window.scss
+++ b/src/style/Window.scss
@@ -1,6 +1,6 @@
 @import url('https://fonts.googleapis.com/css?family=VT323&display=swap');
 
-$box-size: 500px;
+$box-size: 80vw;
 $border-color: #afafaf; //stripes
 $box-color: #e4e4e4; //inside of stripes where text is
 $border-size: 2px;
@@ -10,7 +10,8 @@ $frame-color: #dddddd;
 
 .Frame {
   transform: scale(0.8);
-  margin: 10vw auto;
+  margin-left: auto;
+  margin-right: auto;
   text-align: center;
   font-family: 'VT323', monospace;
   display: flex;
@@ -40,36 +41,25 @@ $frame-color: #dddddd;
       margin-right: auto;
       margin-top: auto;
       margin-bottom: auto;
+      font-size: 1.5em;
+      font-weight: bold;
     }
 
     button {
-      font-family: 'Pixel-Art Regular';
       align-self: flex-end;
       flex: 0 1 auto;
       margin: auto $border-size;
       padding: 0 $border-size;
-      background: none;
-      border: $border-color $border-size solid;
+
       width: 2em;
       height: 2em;
-      color: $border-color;
+      color: darken($border-color, 30%);
       font-weight: bold;
       font-size: 0.7em;
       line-height: 1em;
       -webkit-text-stroke: $border-size - 1px;
       position: relative;
 
-      &:before {
-        content: "";
-        position: absolute;
-        width: 100%;
-        height: 100%;
-        border-left: white solid $border-size;
-        border-top: white solid $border-size;
-        top: -$border-size;
-        left: -$border-size;
-        z-index: 2;
-      }
     }
   }
 
@@ -82,4 +72,88 @@ $frame-color: #dddddd;
     border: $border-size solid $border-color;
     padding: $border-size;
   }
+}
+.minimize{
+  background: #ffff00;
+  border: darken(#ffff00, 15%) $border-size solid;
+  cursor: pointer;
+
+  &:before {
+    content: "";
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    border-left: lighten(#ffff00, 25%) solid $border-size;
+    border-top: lighten(#ffff00, 25%) solid $border-size;
+    top: -$border-size;
+    left: -$border-size;
+    z-index: 2;
+  }
+  &:active {
+    border-left: darken(#ffff00, 15%) $border-size solid;
+    border-top: darken(#ffff00, 15%) $border-size solid;
+
+    &:before {
+      content: none;
+    }
+  }
+}
+
+.close{
+  background: #ff0000;
+  border: darken(#ff0000, 15%) $border-size solid;
+  cursor: pointer;
+
+  &:before {
+    content: "";
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    border-left: lighten(#ff0000, 25%) solid $border-size;
+    border-top: lighten(#ff0000, 25%) solid $border-size;
+    top: -$border-size;
+    left: -$border-size;
+    z-index: 2;
+  }
+  &:active {
+    border-left: darken(#ff0000, 15%) $border-size solid;
+    border-top: darken(#ff0000, 15%) $border-size solid;
+
+    &:before {
+      content: none;
+    }
+  }
+}
+
+.maximize {
+  background: #00ff00;
+  border: darken(#00ff00, 15%) $border-size solid;
+  cursor: pointer;
+
+  &:before {
+    content: "";
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    border-left: lighten(#00ff00, 25%) solid $border-size;
+    border-top: lighten(#00ff00, 25%) solid $border-size;
+    top: -$border-size;
+    left: -$border-size;
+    z-index: 2;
+  }
+
+  &:active {
+    border-left: darken(#00ff00, 15%) solid $border-size;
+    border-top: darken(#00ff00, 15%) solid $border-size;
+
+    &:before {
+      content: none;
+    }
+  }
+}
+
+.body {
+  max-height: 90vh;
+  overflow-y: auto;
+  overflow-x: hidden;
 }
