Added the picture to the cv

--- a/src/components/CV.html
+++ b/src/components/CV.html
@@ -23,15 +23,12 @@
         .header-form-text {
             display: flex;
             flex-direction: column;
-            margin-right: 20px;
         }
         .header-form-image {
-            width: 150px;
-            height: 150px;
-            border-radius: 50%;
-            background: #071A5E;
+            position: relative;
+            top: 0vh;
+            right: 0vw;
             object-fit: cover;
-            align-self: flex-start;
         }
         .header-form h1 {
             font-size: 2.5em;
@@ -84,11 +81,12 @@
         <div class="header-form-text">
             <h1>whyKirbyy</h1>
             <p>Address: 123 Main St, Anytown CH</p>
-            <p>Email: your.email@example.com </p>
-            <p> Phone: (123) 456-7890 </p>
-            <p> LinkedIn: linkedin.com/in/yourprofile</p>
+            <p>Email: your.email@example.com</p>
+            <p>Phone: (123) 456-7890</p>
+            <p>LinkedIn: linkedin.com/in/yourprofile</p>
         </div>
         <div class="header-form-image">
+            <img src="../../public/profile_picture_cv.png" width="258" height="302" alt="Profile Picture" />
         </div>
     </div>
 
