--- a/src/style/pages/CVPage.scss
+++ b/src/style/pages/CVPage.scss
@@ -2,3 +2,17 @@ body, html {
   overflow: hidden;
   height: 100%;
 }
+
+.bunnyDesk {
+  position: absolute;
+  top: 5%;
+  left: 2%;
+  z-index: 10;
+  width: 25%; /* Adjust the percentage as needed */
+  height: auto; /* This maintains the aspect ratio */
+}
+
+.cvwindow-page {
+  position: absolute;
+  left: 14%;
+}
