--- a/src/style/components/SelectionWheel.scss
+++ b/src/style/components/SelectionWheel.scss
@@ -1,11 +1,14 @@
+@import "../../theme";
+
 .selection-wheel {
   position: fixed;
-  right: -18rem;
+  right: -16rem;
   top: 50%;
   transform: translateY(-50%);
   width: 500px;
   height: 500px;
   overflow: visible;
+  z-index: 10;
 
   svg {
     width: 100%;
@@ -14,13 +17,13 @@
   }
 
   .slice {
-    font-family: Helvetica, Arial, sans-serif;
-    font-size: 11px;
+    font-family: $compact-font-1;
+    font-size: 12px;
     pointer-events: none;
   }
 
   text {
-    font-size: 12px;
+    font-size: 2.5rem;
     font-weight: bold;
   }
 }
