--- a/src/style/components/SelectionWheel.scss
+++ b/src/style/components/SelectionWheel.scss
@@ -1,29 +1,77 @@
 @import "../../theme";
 
+.selection-wheel-container {
+    pointer-events: none;
+}
+
 .selection-wheel {
-  position: fixed;
+  position: absolute;
   right: -16rem;
-  top: 50%;
+  top: 46%;
   transform: translateY(-50%);
-  width: 500px;
-  height: 500px;
+  width: 600px;
+  height: 600px;
   overflow: visible;
-  z-index: 10;
+  z-index: 100;
+  pointer-events: auto;
 
   svg {
     width: 100%;
     height: 100%;
     overflow: visible;
+    transform: translate(8rem, 6rem);
   }
 
   .slice {
     font-family: $compact-font-1;
     font-size: 12px;
     pointer-events: none;
+    cursor: pointer;
   }
 
   text {
     font-size: 2.5rem;
     font-weight: bold;
+
+    &:hover {
+    }
   }
 }
+
+.half-circle-button {
+  width: 160px;
+  height: 110px;
+  position: absolute;
+  top: 45.5%;
+  left: 98%;
+  transform: translate(-50%, -50%) rotate(-90deg);
+  background-color: #007bff;
+  color: white;
+  border: none;
+  border-top-left-radius: 80px;
+  border-top-right-radius: 80px;
+  border-bottom-left-radius: 20px;
+  border-bottom-right-radius: 20px;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+  z-index: 101;
+  pointer-events: auto;
+
+  &:hover {
+    background-color: #0056b3;
+  }
+
+  &:active {
+    outline: none;
+  }
+}
+
+.button-text {
+  font-size: 1.1rem;
+  font-weight: bolder;
+  //transform: rotate(90deg);
+  overflow: hidden;
+}
+
+
+
