--- a/src/style/pages/CVPage.scss
+++ b/src/style/pages/CVPage.scss
@@ -8,8 +8,8 @@ body, html {
   top: 7%;
   left: 0%;
   z-index: 10;
-  width: 25%; /* Adjust the percentage as needed */
-  height: auto; /* This maintains the aspect ratio */
+  width: 25%;
+  height: auto;
 }
 
 .cvwindow-page {
