--- a/src/style/components/Window.scss
+++ b/src/style/components/Window.scss
@@ -158,3 +158,162 @@ $frame-color: #dddddd;
   overflow-y: auto;
   overflow-x: hidden;
 }
+
+//////////////////////////////////minimized window/////////////////////////////////////////
+
+$box-size2: 2vw;
+$border-color: #afafaf; //stripes
+$box-color: #e4e4e4; //inside of stripes where text is
+$border-size2: 1px;
+$frame-color: #dddddd;
+
+.Frame2 {
+  transform: scale(0.8);
+  margin-left: auto;
+  margin-right: auto;
+  text-align: center;
+  font-family: 'VT323', monospace;
+  display: flex;
+  width: $box-size2;
+  border-top: $border-size2 solid white;
+  border-bottom: $border-size2 solid $border-color;
+  border-left: $border-size2 solid white;
+  border-right: $border-size2 solid $border-color;
+  background-color: $frame-color;
+  position: relative;
+  justify-content: center;
+  flex-direction: column;
+
+  .header {
+    display: flex;
+    margin: $border-size2 * 2;
+    margin-bottom: 0;
+    box-sizing: border-box;
+    width: calc(#{$box-size2} - #{$border-size2 * 4});
+    height: 0.1em;
+    margin-top: $border-size2 * 2;
+    padding: $border-size2 * 2;
+    background: $box-color;
+    border: $border-size2 solid $border-color;
+
+    h1 {
+      margin-right: auto;
+      margin-top: auto;
+      margin-bottom: auto;
+      font-size: 0.0075em;
+      font-weight: bold;
+    }
+
+    button {
+      align-self: flex-end;
+      flex: 0 1 auto;
+      margin: auto $border-size2;
+
+      width: 2em;
+      height: 2em;
+      color: darken($border-color, 30%);
+      font-weight: bold;
+      font-size: 0.7em;
+      line-height: 1em;
+      -webkit-text-stroke: $border-size - 1px;
+      position: relative;
+
+    }
+  }
+
+  .body {
+    box-sizing: border-box;
+    flex: 1;
+    width: 2em;
+    height: 4em;
+    margin: $border-size * 2;
+    margin-top: 0.5;
+    background: $box-color;
+    border: $border-size solid $border-color;
+    padding: $border-size;
+  }
+}
+.minimize{
+  background: #ffff00;
+  border: darken(#ffff00, 15%) $border-size solid;
+  cursor: pointer;
+
+  &:before {
+    content: "";
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    border-left: lighten(#ffff00, 25%) solid $border-size;
+    border-top: lighten(#ffff00, 25%) solid $border-size;
+    top: -$border-size;
+    left: -$border-size;
+    z-index: 100;
+  }
+  &:active {
+    border-left: darken(#ffff00, 15%) $border-size solid;
+    border-top: darken(#ffff00, 15%) $border-size solid;
+
+    &:before {
+      content: none;
+    }
+  }
+}
+
+.close{
+  background: #ff0000;
+  border: darken(#ff0000, 15%) $border-size solid;
+  cursor: pointer;
+
+  &:before {
+    content: "";
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    border-left: lighten(#ff0000, 25%) solid $border-size;
+    border-top: lighten(#ff0000, 25%) solid $border-size;
+    top: -$border-size;
+    left: -$border-size;
+    z-index: 2;
+  }
+  &:active {
+    border-left: darken(#ff0000, 15%) $border-size solid;
+    border-top: darken(#ff0000, 15%) $border-size solid;
+
+    &:before {
+      content: none;
+    }
+  }
+}
+
+.maximize {
+  background: #00ff00;
+  border: darken(#00ff00, 15%) $border-size solid;
+  cursor: pointer;
+
+  &:before {
+    content: "";
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    border-left: lighten(#00ff00, 25%) solid $border-size;
+    border-top: lighten(#00ff00, 25%) solid $border-size;
+    top: -$border-size;
+    left: -$border-size;
+    z-index: 2;
+  }
+
+  &:active {
+    border-left: darken(#00ff00, 15%) solid $border-size;
+    border-top: darken(#00ff00, 15%) solid $border-size;
+
+    &:before {
+      content: none;
+    }
+  }
+}
+
+.body {
+  max-height: 90vh;
+  overflow-y: auto;
+  overflow-x: hidden;
+}
