--- a/src/style/components/Window.scss
+++ b/src/style/components/Window.scss
@@ -184,7 +184,7 @@ $defaultDuration: .3s;
   position: relative; /* Ensure the child elements are positioned relative to this */
 
   &:hover{
-    border: #f6ff00 $border-size2 solid;
+    border: white $border-size2 solid;
     background-color: darken($frame-color, 5%);
   }
 
@@ -206,7 +206,7 @@ $defaultDuration: .3s;
     width: 2em;
     height: 4em;
     margin: $border-size * 2;
-    margin-top: 0.5;
+    margin-top: 0.5px;
     background: $box-color;
     border: $border-size solid $border-color;
     padding: $border-size;
@@ -277,29 +277,28 @@ $defaultDuration: .3s;
 }
 
 .minimized-close {
-  background: #dddddd;
-  border: $border-size solid $border-color;
+  background: red;
   cursor: pointer;
   border-radius: 50%;
-  width: 0.8rem;
-  height: 0.8rem;
+  width: 1rem;
+  height: 1rem;
   font-size: 0.7rem;
   font-weight: bold;
   align-items: center;
   justify-content: center;
-  display: flex;
+  display: none;
   text-align: center;
   position: absolute;
-  top: 55rem;
-  left: 27.5rem;
+  top: -0.5rem; /* Adjust positioning relative to .Frame2 */
+  right: -0.5rem; /* Adjust positioning relative to .Frame2 */
   z-index: 1000;
 
   &:hover {
-    background: darken(#dddddd, 15%);
+    background: darken(red, 10%);
   }
 
   &:active {
-    border: $border-size solid #dddddd;
+    outline: $border-size solid white;
   }
 }
 
