--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -9,11 +9,12 @@ body{
 :root {
     --font-family: "Source Code Pro", monospace;
     --font-size-default: clamp(1.25rem, 0.5vw + 0.25rem, 2rem);
-    --font-size-highligh: clamp(1.5rem, 1vw + 0.5rem, 2.5rem);
-    --font-size-title: clamp(1.75rem, 1.5vw + 0.75rem, 3rem);
+    --font-size-highlight: clamp(1.5rem, 1.1vw + 0.5rem, 2.5rem);
+    --font-size-title: clamp(1.75rem, 1.3vw + 0.75rem, 3rem);
 
     --background-color: #012B36;
     --text-color: #ffffff;
+    --text-color-shaded: #617B80;
     --highlight-color-blue:#029CE1;
     --highlight-color-green:#60D701;
 }
@@ -21,7 +22,7 @@ body{
 @media (max-width: 1200px) {
     :root {
         --font-size-default: clamp(0.85rem, 0.2vw + 0.5rem, 1.25rem);
-        --font-size-highligh: clamp(1rem, 0.4vw + 0.6rem, 1.75rem);
+        --font-size-highlight: clamp(1rem, 0.4vw + 0.6rem, 1.75rem);
         --font-size-title: clamp(1.25rem, 0.7vw + 0.7rem, 2.25rem);
     }
 }
@@ -29,7 +30,7 @@ body{
 @media (max-width: 820px) {
     :root {
         --font-size-default: clamp(0.75rem, 0.1vw + 0.4rem, 1rem);
-        --font-size-highligh: clamp(0.85rem, 0.2vw + 0.5rem, 1.5rem);
+        --font-size-highlight: clamp(0.85rem, 0.2vw + 0.5rem, 1.5rem);
         --font-size-title: clamp(1rem, 0.5vw + 0.6rem, 2rem);
     }
 }
@@ -37,7 +38,7 @@ body{
 @media (max-width: 480px) {
     :root {
         --font-size-default: clamp(0.6rem, 0.05vw + 0.3rem, 0.85rem);
-        --font-size-highligh: clamp(0.7rem, 0.1vw + 0.4rem, 1.25rem);
+        --font-size-highlight: clamp(0.7rem, 0.1vw + 0.4rem, 1.25rem);
         --font-size-title: clamp(0.85rem, 0.3vw + 0.5rem, 1.75rem);
     }
 }
