--- a/src/styles/components/header.module.css
+++ b/src/styles/components/header.module.css
@@ -1,36 +1,51 @@
 .header{
     display: flex;
-    align-items: center;
+    flex-direction: column;
     padding-left: 1.5vw;
+    padding-top: 1vw;
     margin-right: 5%;
-    gap: 2vw;
+    gap: 1vw;
 }
 
-.title{
-    white-space: nowrap;
-    .mainTitle{
-        font-size: var(--font-size-title);
-        line-height: 0;
-    }
-
-    .subTitle{
-        font-size: var(--font-size-highligh);
-        line-height: 0;
-    }
-}
-
-.navList{
-    display: flex;
+.subTitle{
     font-size: var(--font-size-default);
-    line-height: 0;
+}
 
-    .navItem{
+.navList {
+    display: flex;
+    white-space: nowrap;
+    font-size: var(--font-size-default);
+    align-items: center;
+    gap: 4vw;
+
+    .mainTitle{
+        display: flex;
+        font-size: var(--font-size-title);
+    }
+
+    .navItems{
+        display: flex;
+    }
+
+    .navItem {
         display: flex;
 
-        .value{
+        .value {
             text-decoration: none;
             color: var(--highlight-color-green);
             cursor: pointer;
         }
+
+        .valueBlue {
+            text-decoration: none;
+            color: var(--highlight-color-blue);
+            cursor: pointer;
+        }
     }
 }
+
+.darkerFont{
+    color: var(--text-color-shaded);
+}
+
+
