updated styling, fixed some errors

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -6,6 +6,7 @@ body{
     background: var(--background-color);
     font-family: "Source Code Pro", monospace;
     padding-left: 1.5vw;
+    line-height: 2em;
 }
 
 :root {
