prokects sections done, started work on background

--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -40,7 +40,7 @@
     opacity: 0;
 }
 
-.projects{
+.projects, .background{
     display: flex;
     flex-direction: column;
     align-self: flex-start;
