--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -55,9 +55,11 @@
 .linkInternal{
     color: var(--highlight-color-green);
     text-decoration: none;
+    cursor: pointer;
 }
 
 .linkExternal{
     color: var(--highlight-color-blue);
     text-decoration: none;
+    cursor: pointer;
 }
