started work on the terminal

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -17,6 +17,8 @@ body{
     --font-size-title: clamp(1.75rem, 1.3vw + 0.75rem, 3rem);
 
     --background-color: #012B36;
+    --terminal-background: #173F48;
+    --terminal-border: #2E5159;
     --text-color: #dddddd;
     --text-color-shaded: rgba(63, 91, 99, 0.9);
     --highlight-color-blue:#029CE1;
