--- a/src/styles/components/backToTopButton.module.css
+++ b/src/styles/components/backToTopButton.module.css
@@ -21,7 +21,6 @@
     text-align: center;
     font-family: var(--font-arrow), monospace;
     color: rgba(0, 0, 0, 0.63);
-    transition: width 3s ease, border-radius 3s ease;
 }
 
 .backToTopButton:hover {
@@ -65,6 +64,8 @@
     color: rgba(0, 0, 0, 0.63);
 }
 
-.topSection:active .copySection:active .arrowSection:active{
-    color: var(--highlight-color-blue);
+.topSection:active,
+.copySection:active,
+.arrowSection:active {
+    background: rgba(137, 162, 166, 0.9);
 }
