--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -6,8 +6,8 @@ body{
     color: var(--text-color);
     background: var(--background-color);
     font-family: "Source Code Pro", monospace;
-    padding-left: 1.5vw;
     line-height: 2em;
+    margin: 0 !important;
 }
 
 :root {
