--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -6,6 +6,8 @@
     align-items: center;
     padding-right: 17vw;
     user-select: none;
+    padding-left: 1.5vw;
+    padding-bottom: 3vw;
 }
 
 .about{
