--- a/src/styles/components/backToTopButton.module.css
+++ b/src/styles/components/backToTopButton.module.css
@@ -1,8 +1,16 @@
 .buttonContainer {
     position: fixed;
-    bottom: 1vw;
+    bottom: 5vw;
     right: 1vw;
     z-index: 50;
+}
+
+.terminalIsExpanded{
+    bottom: 16vw;
+}
+
+.terminalIsHidden{
+    bottom: 1vw;
 }
 
 .backToTopButton {
