--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,12 +2,18 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Libre+Baskerville:ital,wght@0,400;0,700;1,400&family=Manrope:wght@200..800&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Fira+Code:wght@300..700&family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Libre+Baskerville:ital,wght@0,400;0,700;1,400&family=Manrope:wght@200..800&display=swap');
 
-body{
+body {
     color: var(--text-color);
     background: var(--background-color);
     font-family: "Source Code Pro", monospace;
     line-height: 2em;
     margin: 0 !important;
+    overflow-y: scroll;
+    scrollbar-width: none;
+}
+
+:root::-webkit-scrollbar {
+    display: none; 
 }
 
 :root {
