--- a/src/app/about-project/page.module.css
+++ b/src/app/about-project/page.module.css
@@ -6,3 +6,34 @@
     padding-left: 1.5vw;
     padding-bottom: 3vw;
 }
+
+.comment{
+    display: flex;
+    flex-direction: column;
+    color: var(--text-color-shaded);
+}
+
+.comment:hover{
+    color: rgba(82, 118, 128, 0.9);
+    cursor: pointer;
+}
+
+.darkerFont{
+    color: var(--text-color-shaded);
+}
+
+.section{
+    font-size: var(--font-size-default);
+    display: flex;
+    flex-direction: column;
+}
+
+.line{
+    display: flex;
+}
+
+.linkExternal{
+    color: var(--highlight-color-blue);
+    text-decoration: none;
+    cursor: pointer;
+}
