--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,6 +1,6 @@
-@import url('https://fonts.googleapis.com/css2?family=Source+Code+Pro:ital,wght@0,200..900;1,200..900&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Libre+Baskerville:ital,wght@0,400;0,700;1,400&family=Manrope:wght@200..800&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Fira+Code:wght@300..700&family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Libre+Baskerville:ital,wght@0,400;0,700;1,400&family=Manrope:wght@200..800&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Source+Code+Pro:ital,wght@0,200..900;1,200..900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Libre+Baskerville:ital,wght@0,400;0,700;1,400&family=Manrope:wght@200..800&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Fira+Code:wght@300..700&family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Libre+Baskerville:ital,wght@0,400;0,700;1,400&family=Manrope:wght@200..800&display=swap");
 
 body {
     color: var(--text-color);
@@ -13,7 +13,7 @@ body {
 }
 
 :root::-webkit-scrollbar {
-    display: none; 
+    display: none;
 }
 
 :root {
@@ -24,14 +24,14 @@ body {
     --font-size-highlight: clamp(1.5rem, 1.1vw + 0.5rem, 2.5rem);
     --font-size-title: clamp(1.75rem, 1.3vw + 0.75rem, 3rem);
 
-    --background-color: #012B36;
-    --terminal-background: #173F48;
-    --terminal-border: #2E5159;
-    --terminal-button-border: #9EADAE;
+    --background-color: #012b36;
+    --terminal-background: #173f48;
+    --terminal-border: #2e5159;
+    --terminal-button-border: #9eadae;
     --text-color: #dddddd;
     --text-color-shaded: rgba(63, 91, 99, 0.9);
-    --highlight-color-blue:#029CE1;
-    --highlight-color-green:#60D701;
+    --highlight-color-blue: #029ce1;
+    --highlight-color-green: #60d701;
 }
 
 @media (max-width: 1200px) {
